# polestar

./: polestar.cabal
src/: CoreRepl.hs  Repl.hs
src/Polestar/: Eval.hs  Parse.hs  PrettyPrint.hs  Subtype.hs  Type.hs  TypeCheck.hs
src/Polestar/Core/: Eval.hs  Expander.hs  Parse.hs  PrettyPrint.hs  Type.hs  TypeCheck.hs
src/Polestar/Parse/: Number.hs
