name:                polestar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/minoki/polestar
license:             BSD3
license-file:        LICENSE
author:              ARATA Mizuki
maintainer:          minorinoki@gmail.com
copyright:           2017 ARATA Mizuki
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns

source-repository head
  type:     git
  location: https://github.com/minoki/polestar
