name:                polestar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/minoki/polestar
license:             BSD3
license-file:        LICENSE
author:              ARATA Mizuki
maintainer:          minorinoki@gmail.com
copyright:           2017 ARATA Mizuki
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Polestar.Type
                     , Polestar.Subtype
                     , Polestar.TypeCheck
                     , Polestar.Parse
                     , Polestar.Parse.Number
                     , Polestar.PrettyPrint
                     , Polestar.Eval
                     , Polestar.Core.Type
                     , Polestar.Core.TypeCheck
                     , Polestar.Core.Parse
                     , Polestar.Core.PrettyPrint
                     , Polestar.Core.Eval
  build-depends:       base >= 4.9 && < 5, parsec, mtl, containers
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns

executable Repl
  hs-source-dirs:      src
  main-is:             Repl.hs
  default-language:    Haskell2010
  other-modules:       Polestar.Type
                     , Polestar.Subtype
                     , Polestar.TypeCheck
                     , Polestar.Parse
                     , Polestar.Parse.Number
                     , Polestar.PrettyPrint
                     , Polestar.Eval
  build-depends:       base >= 4.9 && < 5, parsec, haskeline
  ghc-options:         -Wincomplete-patterns

executable CoreRepl
  hs-source-dirs:      src
  main-is:             CoreRepl.hs
  default-language:    Haskell2010
  other-modules:       Polestar.Core.Type
                     , Polestar.Core.TypeCheck
                     , Polestar.Core.Parse
                     , Polestar.Parse.Number
                     , Polestar.Core.PrettyPrint
                     , Polestar.Core.Eval
  build-depends:       base >= 4.9 && < 5, parsec, haskeline
  ghc-options:         -Wincomplete-patterns

source-repository head
  type:     git
  location: https://github.com/minoki/polestar
